test/vm/errors/compiler/export_list_undefined.ach
// Compiler error: export list references undefined name
// Expected: error "not defined in this module"

import "../../../modules/bad_export_list.ach" as bad
